Closed Bug 1206568 Opened 9 years ago Closed 9 years ago

FFmpeg MediaDataDecoder not accessing this codec context in a thread safe manner

Categories

(Core :: Audio/Video: Playback, defect)

43 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox43 --- fixed
firefox44 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(2 files)

This is similar to bug 1192675.

Must ensure the mCodecContext is only ever accessed on the same thread to prevent races.
Add strong assertion that it is indeed the case.
Attachment #8663502 - Flags: review?(cpearce)
Assignee: nobody → jyavenard
Make it consistent across the use of virtual/override
Attachment #8663503 - Flags: review?(cpearce)
Attachment #8663502 - Flags: review?(cpearce) → review+
Comment on attachment 8663503 [details] [diff] [review]
P2. Clean up header declarations.

Review of attachment 8663503 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/media/platforms/android/AndroidDecoderModule.h
@@ +55,5 @@
> +  nsRefPtr<MediaDataDecoder::InitPromise> Init() override;
> +  nsresult Flush() override;
> +  nsresult Drain() override;
> +  nsresult Shutdown() override;
> +  nsresult Input(MediaRawData* aSample);

nsresult Input(MediaRawData* aSample) override;

?
Attachment #8663503 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/aa240de37603
https://hg.mozilla.org/mozilla-central/rev/f72556c17c7c
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Blocks: 1214943
Comment on attachment 8663502 [details] [diff] [review]
P1. Ensure FFmpeg decoder is only accessed through the decoder's task queue.

Approval Request Comment
[Feature/regressing bug #]: This is ensuring our FFmpeg support is robust
[User impact if declined]: unsafe use of FFmpeg, crashes, likely security risk
[Describe test coverage new/current, TreeHerder]: In central for several weeks.
[Risks and why]: Low
[String/UUID change made/needed]: None
Attachment #8663502 - Flags: approval-mozilla-aurora?
Comment on attachment 8663502 [details] [diff] [review]
P1. Ensure FFmpeg decoder is only accessed through the decoder's task queue.

Approved for uplift; see bug 1214943.
jya will land this.
Attachment #8663502 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
See Also: → 1240411
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: