Bug 1206568: P1. Ensure FFmpeg decoder is only accessed through the decoder's task queue. r=cpearce a=lizzard

Add strong assertion that it is indeed the case.